--- a/node/package.json
+++ b/node/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Odair/goimage#readme",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "mysql": "^2.18.1"
   }
 }
