--- a/node/docker-compose.yaml
+++ b/node/docker-compose.yaml
@@ -25,6 +25,17 @@ services:
       - MYSQL_ROOT_PASSWORD=root
     networks:
       - odanet
+  nginx:
+    image: nginx
+    container_name: nginx_proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
+    networks:
+      - odanet
 
 networks:
     odanet:
