--- a/node/docker-compose.yaml
+++ b/node/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
       - "3001:3000"
     depends_on:
       - db
+    volumes:
+      - ./:/usr/src/app
 
   db:
     platform: linux/x86_64 # no MAC M1 é necessário definir o platform pro container do mysql funcionar
